--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-avatar">👨‍💼</div>
-                    <h3>Founder & CEO</h3>
+                    <h3>Founder & CEO (Currently)</h3>
                     <p class="team-expertise">Township-born entrepreneur with fintech experience</p>
                 </div>
 
