--- a/index.html
+++ b/index.html
@@ -1475,26 +1475,23 @@
             <div class="team-grid">
                 <div class="team-card">
                     <div class="team-avatar">👨‍💼</div>
-                    <h3>Founder & CEO (Currently)</h3>
+                    <h3>Founder & CEO
                     <p class="team-expertise">Township-born entrepreneur with fintech experience</p>
                 </div>
 
                 <div class="team-card">
                     <div class="team-avatar">👩‍💻</div>
                     <h3>Head of Technology</h3>
-                    <p class="team-expertise">Built payment systems used by millions across emerging markets</p>
                 </div>
 
                 <div class="team-card">
                     <div class="team-avatar">👨‍🏫</div>
                     <h3>Community Director</h3>
-                    <p class="team-expertise">Years working with informal traders and township businesses</p>
                 </div>
 
                 <div class="team-card">
                     <div class="team-avatar">👩‍💼</div>
                     <h3>Partnerships Lead</h3>
-                    <p class="team-expertise">Former banking executive with deep connections to SA financial institutions</p>
                 </div>
             </div>
         </div>
@@ -1511,7 +1508,7 @@
             <div class="investment-grid">
                 <div class="investment-card">
                     <div class="investment-label">Seeking</div>
-                    <div class="investment-value">$2M</div>
+                    <div class="investment-value">R2M</div>
                     <div class="investment-desc">Seed Round</div>
                 </div>
 
